--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,9 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    testCompile group:'org.mockito',name:'mockito-all',version:'1.10.19'
-    testCompile group: 'junit',name: 'junit', version: '4.12'
+     testCompile group: 'org.mockito',name: 'mockito-all',version: '1.10.19'
+     testCompile group: 'junit', name: 'junit', version: '4.12'
+     testCompile group:'org.springframework.boot',name:'spring-boot-starter-test',version:'2.2.6.RELEASE'
 }
 
 test {
